@@ -1,5 +1,8 @@
 # 歷史更新 History Update
 
+* 20230503 Update
+  * 修復 LineBot query line id return錯誤
+
 * 20230502 Update
   * 更新 個人不想看的廣告或網站
   * 更新 Dcard受害文章
